[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "lxstats"
description = "Library to interact with files under /proc and /sys on Linux"
readme = "README.rst"
keywords = [
  "admin",
  "linux",
  "monitoring",
  "performance",
  "proc",
  "sys",
  "system",
]
license = {file = "LICENSE.txt"}
maintainers = [
    {name = "Alberto Donato", email = "alberto.donato@gmail.com"},
]
authors = [
    {name = "Alberto Donato", email = "alberto.donato@gmail.com"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Benchmark",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
   "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "prettytable",
  "toolrack>=2.0.1",
]
[project.optional-dependencies]
testing = [
  "pytest",
  "pytest-mock",
]
[project.urls]
changelog = "https://github.com/albertodonato/lxstats/blob/main/CHANGES.rst"
homepage = "https://github.com/albertodonato/lxstats"
repository = "https://github.com/albertodonato/lxstats"
[project.scripts]
procs = "lxstats.scripts.procs:script"

[tool.setuptools.dynamic]
version = {attr = "lxstats.__version__"}

[tool.setuptools.packages.find]
include = ["lxstats*"]

[tool.black]
line-length = 79

[tool.isort]
combine_as_imports = true
force_grid_wrap = 2
force_sort_within_sections = true
from_first = false
include_trailing_comma = true
multi_line_output = 3
order_by_type = false
profile = "black"
use_parentheses = true

[tool.flake8]
ignore = ["E203", "E501", "W503"]
max-line-length = 80
select = ["C", "E", "F", "W", "B", "B950"]

[tool.coverage.report]
fail_under = 100.0
show_missing = true
skip_covered = true

[tool.coverage.run]
source = ["lxstats"]
omit = ["lxstats/scripts/*"]

[tool.mypy]
ignore_missing_imports = true
install_types = true
non_interactive = true
warn_return_any = true
warn_unused_configs = true
