[metadata]
name = lxstats
version = 0.3.0
license = LGPLv3+
description = Library to interact with files under /proc and /sys on Linux
long_description = file: README.rst
author = Alberto Donato
author_email = alberto.donato@gmail.com
maintainer = Alberto Donato
maintainer_email = alberto.donato@gmail.com
url = https://github.com/albertodonato/lxstats
keywords = admin, linux, monitoring, performance, proc, sys, system
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: System :: Benchmark
    Topic :: System :: Monitoring
    Topic :: System :: Networking :: Monitoring
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
python_requires = >= 3.6
install_requires =
    prettytable
    toolrack >= 2.0.1
packages = find:
include_package_data = True

[options.packages.find]
include =
    lxstats
    lxstats.*

[options.extras_require]
testing =
    pytest
    pytest-mock

[options.entry_points]
console_scripts =
    procs = lxstats.scripts.procs:script

[globals]
lint_files = setup.py lxstats

[coverage:run]
source = lxstats
omit =
    lxstats/scripts/*

[coverage:report]
show_missing = True
fail_under = 100.0
skip_covered = True

[flake8]
max-line-length = 80
select = C, E, F, W, B, B950
ignore = E203, E501, W503

[mypy]
incremental = False
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[tox:tox]
skipsdist = True

[testenv]
deps =
    .
    .[testing]
commands =
    {envbindir}/pytest {posargs}

[testenv:format]
deps =
    black
    isort
commands =
    {envbindir}/isort {[globals]lint_files}
    {envbindir}/black -q {[globals]lint_files}

[testenv:lint]
deps =
    black
    flake8
    isort
commands =
    {envbindir}/isort --check-only --diff {[globals]lint_files}
    {envbindir}/black --check {[globals]lint_files}
    {envbindir}/flake8 {[globals]lint_files}

[testenv:check]
deps =
    mypy
commands =
    {envbindir}/mypy -p lxstats {posargs}

[testenv:coverage]
deps =
    .
    .[testing]
    pytest-cov
commands =
    {envbindir}/pytest --cov {posargs}

[testenv:docs]
deps =
    .
    sphinx
    sphinx-autodoc-typehints
commands =
    sphinx-build -b html docs html {posargs}

